--- a/doc/iitsrc/ea-t14.tex
+++ b/doc/iitsrc/ea-t14.tex
@@ -1,6 +1,10 @@
 \documentclass{iitsrc}
 \usepackage[utf8x]{inputenc}
 
+% Begin --ADDED PACKAGES-- %
+\usepackage{url} 
+% End --ADDED PACKAGES-- %
+
 % Please do not remove the following command:
 \editpages{1}{8}
 
@@ -22,8 +26,6 @@
 \section*{Extended Abstract}
 
 Communication between graduates and university can be suitable for both sides.The information system for communication with graduates represents one of many ways how university can keep in touch with its graduates. Except for communication between university and its graduates, the information system should allow communication between graduates themselves and their personal presentation in public. The system also should collect actual information about working experience of graduates, which can improve faculty credits and teaching process. The presented information system includes all these points and focuses on security, usability and comfortable user interface.
-
-
 
 
 A FIIT STU graduate is a person who has been studying at this faculty for at least three years or more. During this period graduates establish a lot of social contacts with their classmates and their teachers as well. After graduating, these contacts are usually broken and only rarely continue. Generally, after a student leaves the university, he losts most of his contacts. However, the faculty does not want this trend to continue. The faculty can see its graduates as potential business partners with possibility of cooperation after the studies. Graduates are very good source of information and critics that could help to improve the quality of the faculty. The best way how to gain required information are feedback forms.
@@ -69,6 +71,6 @@ We designed and implemented the ALUMNI information system. This system will be a
 \nocite{team15}
 \nocite{cakephp}
 
-\bibliography{common}
+\bibliography{literature_article}
 \bibliographystyle{iitsrc}
 \end{document}
