--- a/doc/iitsrc/ea-t14.tex
+++ b/doc/iitsrc/ea-t14.tex
@@ -32,36 +32,31 @@ A FIIT STU graduate is a person who has been studying at this faculty for at lea
 
 The main business goals of the system are:
 
-\begin{itemize}
-\item {\em Present basic information about graduates to the public.}
+{\em Present basic information about graduates to the public.}
 It means creation and maintenance of the graduate database and presentation of basic information about individuals to the public on the web without access restrictions.
 
-\item {\em Provide gathering of actual information about graduates in practice to the faculty.} 
+{\em Provide gathering of actual information about graduates in practice to the faculty.} 
 It means to get actual information about contacts, jobs, career development, application/professional focus, areas of graduate activity and personal interests, etc.
 
-\item {\em Enable communication to graduates.}
+{\em Enable communication to graduates.}
 The system should provide easy and safe way of communication in informatics community protected by well-designed access rights for groups of authorized participants.
-\end{itemize}
+\\
+\\
+Alumni is web based application that can be accessed using common web browser. The most important functions are:
 
-Alumni is web based application that can be accessed using common web browser.  
-
-The most important functions are:
-
-\begin{itemize}
-\item {\em Actualities} 
+{\em Actualities} 
 represent a tool for the faculty, which allows to inform graduates and public about news and events on the faculty.
 
-\item {\em Inquiry module}
+{\em Inquiry module}
 serves for collecting information from graduates. The faculty can generate various statistics based on the inquiry results. An inquiry is created by a person authorized by the faculty. Every inquiry can be targeted on a selected graduates group depending on the year of graduate. Inquiries are accessible to graduates after logging in Alumni system.
 
-\item {\em Mail communication} ensures the communication between faculty and graduates and graduates themselves using message exchange.
+{\em Mail communication} ensures the communication between faculty and graduates and graduates themselves using message exchange.
 
-\item {\em Personal presentation.}
+{\em Personal presentation.}
 Every student that graduates is automatically added to Alumni database and a personal account is created for him. Personal profile of graduate includes information such as name, surname, study program, year of graduate, academical degree and information about thesis or diploma work. Optionally other personal information can be added to personal profile, for example e-mail, phone or ICQ number, link to personal web page or information about current employment. 
 
-\item {\em Module of statistics}
+{\em Module of statistics}
 collects various statistical information. It operates on data from inquiries, graduates personal data and allows generating reports. This module also counts system visit rate. Outputs from various statistics can help the faculty to improve the quality and adapt to new requirements.
-\end{itemize}
 
 We designed and implemented the ALUMNI information system. This system will be available for general public use through the web interface. A non-registered visitor can look at the list of graduates according to year of graduation or a field of study. He can also look at graduates profiles. The level of profile details shown to the public is limited. By default, a public visitor can only see name and surname of a graduate, year of graduation and a field of study. The faculty endeavours to propagate its graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experience, knowledge. Graduates can enable to display this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate's curriculum vitae in pdf format, which is provided automatically. It is in a graduate's competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. A graduate can use it for the building of his virtual web identity on the internet. 
 
