--- a/doc/iitsrc/ea-t14.tex
+++ b/doc/iitsrc/ea-t14.tex
@@ -27,7 +27,7 @@
 
 Communication between graduates and university can be suitable for both sides.The information system for communication with graduates represents one of many ways how university can keep in touch with its graduates. Except for communication between university and its graduates, the information system should allow communication between graduates themselves and their personal presentation in public. The system also should collect actual information about working experience of graduates, which can improve faculty credits and teaching process. The presented information system includes all these points and focuses on security, usability and comfortable user interface.
 
-During study graduates establish a lot of social contacts with their classmates and their teachers as well. After graduating, these contacts are usually broken and only rarely continue. Generally, after a student leaves the university, he losts most of his contacts. However, the faculty does not want this trend to continue. The faculty can see its graduates as potential business partners with possibility of cooperation after the studies. Graduates are very good source of information and critics that could help to improve the quality of the faculty.
+During the study graduates establish a lot of social contacts with their classmates and their teachers as well. After graduating, these contacts are usually broken and only rarely continue. Generally, after a student leaves the university, he losts most of his contacts. However, the faculty does not want this trend to continue. The faculty can see its graduates as potential business partners with possibility of cooperation after the studies. Graduates are very good source of information and critics that could help to improve the quality of the faculty.
 
 The main business goals of the system are:
 
