--- a/doc/iitsrc/ea-t14.tex
+++ b/doc/iitsrc/ea-t14.tex
@@ -39,7 +39,8 @@ It means to get actual information about contacts, jobs, career development, app
 
 {\em Enable communication to graduates.}
 The system should provide easy and safe way of communication in informatics community protected by well-designed access rights for groups of authorized participants.
-Alumni is web based application that can be accessed using common web browser. The most important functions are:
+
+The most important functions are:
 
 {\em Actualities} 
 represent a tool for the faculty, which allows to inform graduates and public about news and events on the faculty.
